# itba-cde-2023-examples

./: .gitignore  Makefile
.github/workflows/: run-linter.yaml  run-tests.yaml
airflow_examples/: Dockerfile  docker-compose.yaml
airflow_examples/dags/: api_token.py  context.py  data_intervals.py  k8s_example.py  sensors.py  sensors2.py  very_simple_dag.py
airflow_examples/teaching_steps/: pyproject.toml  readme.md  requirements.txt
airflow_examples/teaching_steps/dags/: etl_dag.py
airflow_examples/teaching_steps/teaching_steps/: dag_object.py  dag_object_with_tasks.py  etl_functions.py  one_etl_functions.py
dags/: branch_operator.py  context.py  k8s_example.py  macros.py  sensors.py  xcoms.py
docker/: Dockerfile  Makefile  app.py  docker-compose.yml  requirements.txt
package_management/pip/: Makefile  Readme.md  requirements.txt
package_management/poetry/: Makefile
package_management/poetry/myproject/: pyproject.toml
package_management/pyenv/: Makefile
package_management/setuptools/: Readme.md  setup.py
package_management/setuptools/mymodule/: somefunctions.py
package_management/setuptools/tests/: tests.py
package_management/venvs/: Makefile
pandas2_examples/: common_env.py  from_pd_bq_to_psql.py  from_pd_psql_to_bq.py  from_psql_to_bq.py  gzip_test.py  parquet_partitioning.py  pd_bq.py  pd_csv_parquet.py  pd_json.py  pd_parquet_efficiency.py  pd_parquet_to_gcs_and_bq.py  pd_psql.py  pyproject.toml  sqlalchemy_sqlite.py
pandas2_examples/dbs/: create_sqlite_db.sh  titanic.sql  titanic_sqlite.sql
pandas2_examples/start_postgres/: README.md  start_postgres_db.sh
testing/: pyproject.toml  return_df.py  test_return_df.py  test_transform_data.py
testing-3/: pyproject.toml
testing-3/src/my_package/: __init__.py  add.py  get_data_from_api.py  return_df.py
testing-3/tests/: test_add.py  test_new_url.py  test_return_df.py  test_transform_data.py
testing/tests/: test_add.py  test_transform_data.py
