[project]
name = "testing-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Axel Furlan", email = "afurlan@amperon.co" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]


[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
